--- a/assets/css/sass/product.scss
+++ b/assets/css/sass/product.scss
@@ -97,14 +97,16 @@
           margin: 0 10px;
           cursor: pointer;
           &.is-active span {
-            background: gray;
+            background: #ffc1078a;
+            transition: all 0.5s ease-in;
+            border: 0px;
           }
           span {
             display: inline-block;
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-            border: 1px solid #fff;
+            width: 40px;
+            height: 5px;
+            border:1px solid #3eab903b;
+            transition: all 0.5s ease-in;
           }
         }
       }
