--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1409,20 +1409,23 @@ header .fz_sigin ul li:last-child a {
 }
 .fz_product_sec .fz_container .dot-nav-position-right .dot-nav li {
   list-style: none;
-  margin: 0 10px;
+  margin: 0 5px;
   cursor: pointer;
 }
 .fz_product_sec .fz_container .dot-nav-position-right .dot-nav li.is-active span {
-  background: rgba(255, 193, 7, 0.5411764706);
   transition: all 0.5s ease-in;
   border: 0px;
+  background: rgb(21, 221, 172);
+  opacity: 1;
 }
 .fz_product_sec .fz_container .dot-nav-position-right .dot-nav li span {
   display: inline-block;
-  width: 40px;
-  height: 5px;
-  border: 1px solid rgba(62, 171, 144, 0.231372549);
+  width: 25px;
+  height: 4px;
+  border-radius: 3px;
   transition: all 0.5s ease-in;
+  background: rgb(21, 221, 172);
+  opacity: 0.2;
 }
 .fz_product_sec .fz_container .fz_sub_container {
   display: flex;
@@ -2855,7 +2858,7 @@ header .fz_sigin ul li:last-child a {
   }
 }
 .play_store_section .play_store_left .start_now_btn {
-  margin-top: 50px;
+  margin-bottom: 50px;
 }
 .play_store_section .play_store_left .start_now_btn .dedcription-btn {
   position: relative;
@@ -2865,7 +2868,7 @@ header .fz_sigin ul li:last-child a {
   color: #3EAB90;
   text-align: center;
   font-size: 18px;
-  padding: 9px 56px 9px 20px;
+  padding: 10px 20px;
   transition: all 0.3s;
   box-shadow: 0 3px 20px 0 rgba(0, 0, 0, 0.06);
   text-decoration: none;
@@ -2885,7 +2888,10 @@ header .fz_sigin ul li:last-child a {
 .play_store_section .play_store_left .start_now_btn .name-descripeion {
   position: relative;
   z-index: 9999;
-  font-weight: 600;
+  font-weight: 200;
+}
+.play_store_section .play_store_left .start_now_btn .name-descripeion:hover {
+  color: #fff;
 }
 .play_store_section .play_store_left .start_now_btn .btn-icon::after {
   content: "";
