--- a/assets/css/sass/product.scss
+++ b/assets/css/sass/product.scss
@@ -94,19 +94,22 @@
         height: 100vh;
         li {
           list-style: none;
-          margin: 0 10px;
+          margin: 0 5px;
           cursor: pointer;
           &.is-active span {
-            background: #ffc1078a;
             transition: all 0.5s ease-in;
             border: 0px;
+            background: rgb(21 221 172);
+            opacity: 1;
           }
           span {
             display: inline-block;
-            width: 40px;
-            height: 5px;
-            border:1px solid #3eab903b;
+            width: 25px;
+            height: 4px;
+            border-radius: 3px;
             transition: all 0.5s ease-in;
+            background: rgb(21 221 172);
+            opacity: 0.2;
           }
         }
       }
