--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -171,6 +171,12 @@ header .navbar-expand-lg .navbar-nav li a.nav-link {
   position: relative;
   transition: all 0.7s ease;
 }
+@media screen and (max-width: 991px) {
+  header .navbar-expand-lg .navbar-nav li a.nav-link {
+    padding: 20px 5px;
+    color: #ffffff;
+  }
+}
 header .navbar-expand-lg .navbar-nav li a.nav-link:hover {
   color: #ffffff;
 }
@@ -299,6 +305,7 @@ header .fz_sigin ul li:last-child a {
 #fz-hero-bg canvas {
   position: absolute;
   width: 100%;
+  display: flex;
   height: 100%;
   z-index: 1;
 }
@@ -839,14 +846,6 @@ header .fz_sigin ul li:last-child a {
   inherits: true;
   initial-value: 0turn;
 }
-@keyframes moveAnimation {
-  0% {
-    transform: translateX(0);
-  }
-  50% {
-    transform: translateX(50%);
-  }
-}
 .features_posibilityies {
   padding: 0;
   background-color: #000 !important;
@@ -859,13 +858,13 @@ header .fz_sigin ul li:last-child a {
 }
 @media screen and (max-width: 768px) {
   .features_posibilityies {
-    height: auto;
+    height: auto; /* Allow content to adjust height based on content */
   }
 }
 .features_posibilityies .container {
   position: relative;
   text-align: center;
-  width: 50%;
+  width: 100%;
   margin: 0 auto;
   display: inline-flex;
   align-items: center;
@@ -874,6 +873,7 @@ header .fz_sigin ul li:last-child a {
 @media screen and (max-width: 768px) {
   .features_posibilityies .container {
     width: 100%;
+    flex-direction: column; /* Stack content vertically */
   }
 }
 .features_posibilityies .container .texts {
@@ -886,7 +886,18 @@ header .fz_sigin ul li:last-child a {
   position: relative;
   top: 125px;
 }
-@media screen and (max-width: 1440px) {
+@media screen and (max-width: 768px) {
+  .features_posibilityies .container .texts {
+    height: auto; /* Allow for dynamic height */
+  }
+}
+@media screen and (max-width: 768px) {
+  .features_posibilityies .container .texts img {
+    width: 100%;
+    height: auto; /* Maintain aspect ratio */
+  }
+}
+@media (min-width: 769px) and (max-width: 1400px) {
   .features_posibilityies .container .texts img {
     height: 1100px;
   }
@@ -901,17 +912,30 @@ header .fz_sigin ul li:last-child a {
   align-items: center;
   justify-content: center;
 }
-@media screen and (max-width: 1440px) {
-  .features_posibilityies .container .inner-text .left img {
-    height: 1200px;
+@media screen and (max-width: 768px) {
+  .features_posibilityies .container .inner-text {
+    flex-direction: column; /* Stack content */
+    height: auto;
+    padding: 20px; /* Add some spacing for smaller screens */
   }
 }
-@media screen and (max-width: 1440px) {
+@media screen and (max-width: 768px) {
+  .features_posibilityies .container .inner-text .left img,
   .features_posibilityies .container .inner-text .right img {
-    height: 1150px;
+    display: none; /* Hide images for small screens */
   }
 }
-.features_posibilityies .container .inner-text .left.left, .features_posibilityies .container .inner-text .right.left {
+@media screen and (min-width: 769px) {
+  .features_posibilityies .container .inner-text .left img,
+  .features_posibilityies .container .inner-text .right img {
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
+}
+.features_posibilityies .container .inner-text .left.left,
+.features_posibilityies .container .inner-text .right.left {
   text-align: right;
   display: inline-flex;
   align-items: center;
@@ -919,7 +943,15 @@ header .fz_sigin ul li:last-child a {
   margin: auto;
   position: relative;
 }
-.features_posibilityies .container .inner-text .left.right, .features_posibilityies .container .inner-text .right.right {
+@media screen and (max-width: 768px) {
+  .features_posibilityies .container .inner-text .left.left,
+  .features_posibilityies .container .inner-text .right.left {
+    width: 100%;
+    text-align: center;
+  }
+}
+.features_posibilityies .container .inner-text .left.right,
+.features_posibilityies .container .inner-text .right.right {
   text-align: left;
   display: inline-flex;
   align-items: center;
@@ -927,21 +959,25 @@ header .fz_sigin ul li:last-child a {
   margin: auto;
   position: relative;
 }
+@media screen and (max-width: 768px) {
+  .features_posibilityies .container .inner-text .left.right,
+  .features_posibilityies .container .inner-text .right.right {
+    width: 100%;
+    text-align: center;
+  }
+}
 .features_posibilityies .container .dd {
   position: absolute;
-  left: 0px;
-  right: 0px;
-  translate: none;
-  rotate: none;
-  scale: none;
-  transform: translate(0px, 0px);
+  left: 0;
+  right: 0;
+  transform: translate(0, 0);
   opacity: 1;
 }
-.features_posibilityies .container h2 {
-  font-weight: bolder;
-  font-size: 50px;
-  color: #ddd;
-  text-transform: uppercase;
+@media screen and (max-width: 768px) {
+  .features_posibilityies .container .dd {
+    position: static; /* Adjust positioning for mobile */
+    margin-top: 20px; /* Add spacing below content */
+  }
 }
 .features_posibilityies .container h3 {
   font-weight: 200;
@@ -964,6 +1000,7 @@ header .fz_sigin ul li:last-child a {
 @media screen and (max-width: 768px) {
   .features_posibilityies .container h3 {
     font-size: 40px;
+    padding: 10px; /* Add spacing for smaller viewports */
   }
 }
 
@@ -2127,7 +2164,7 @@ header .fz_sigin ul li:last-child a {
     line-height: 24px;
   }
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
   .counter_section p br {
     display: none;
   }
@@ -2152,7 +2189,6 @@ header .fz_sigin ul li:last-child a {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  border-right: 1px solid;
   border-color: -moz-linear-gradient(top, #FFFFFF, #3EAB90);
   position: relative;
 }
@@ -2220,7 +2256,7 @@ header .fz_sigin ul li:last-child a {
   text-align: center;
   padding: 66px 0 84px;
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
   .fz-blog .blog-carousel {
     padding: 66px 0 30px;
   }
@@ -2230,6 +2266,12 @@ header .fz_sigin ul li:last-child a {
   font-size: 40px;
   font-weight: 500;
   line-height: 58px;
+}
+@media screen and (max-width: 991px) {
+  .fz-blog .blog-carousel h3 {
+    line-height: 40px;
+    font-size: 30px;
+  }
 }
 .fz-blog .blog-carousel p {
   color: #ffffff;
@@ -2259,6 +2301,12 @@ header .fz_sigin ul li:last-child a {
   border: 1px solid transparent;
   border-radius: 21px;
   background: linear-gradient(150.11deg, #002C21 3.16%, #86E1CB 94.92%) border-box;
+}
+@media screen and (max-width: 1400px) {
+  .fz-blog .item {
+    width: auto;
+    height: auto;
+  }
 }
 .fz-blog .item:hover .card-body {
   bottom: 0px;
@@ -2292,6 +2340,7 @@ header .fz_sigin ul li:last-child a {
   .fz-blog .item .card-body {
     width: 100%;
     padding: 0px 25px 30px 24px;
+    bottom: -67px;
   }
 }
 .fz-blog .item .card-body h5 {
@@ -2338,8 +2387,8 @@ header .fz_sigin ul li:last-child a {
 }
 .fz-blog .owl-carousel .owl-nav {
   display: flex;
-  justify-content: end;
-  gap: 190px;
+  justify-content: center;
+  gap: 170px;
   position: relative;
   margin-top: 50px;
 }
@@ -2350,6 +2399,7 @@ header .fz_sigin ul li:last-child a {
   color: #ffffff;
   cursor: pointer;
   transition: all 0.3s ease;
+  justify-content: center;
 }
 .fz-blog .owl-carousel .owl-nav .custom-prev:hover,
 .fz-blog .owl-carousel .owl-nav .custom-next:hover {
@@ -2359,40 +2409,25 @@ header .fz_sigin ul li:last-child a {
   content: "";
   width: 80px;
   height: 2.27px;
+  justify-content: center;
   position: absolute;
 }
 .fz-blog .owl-carousel .owl-nav::after {
   background: #ffffff;
   top: 50%;
   transform: translate(-50%, -50%);
-  right: 8px;
-}
-@media screen and (max-width: 991px) {
-  .fz-blog .owl-carousel .owl-nav::after {
-    justify-content: center;
-  }
+  left: 53%;
 }
 .fz-blog .owl-carousel .owl-nav::before {
   background: #3EAB90;
   top: 50%;
-  left: 87%;
   transform: translate(-50%, -50%);
-}
-@media screen and (max-width: 991px) {
-  .fz-blog .owl-carousel .owl-nav::before {
-    left: 60%;
-  }
 }
 .fz-blog .owl-carousel .owl-nav .custom-prev {
   color: #3EAB90;
 }
 .fz-blog .owl-carousel .owl-nav .custom-next {
   color: #ffffff;
-}
-@media screen and (max-width: 991px) {
-  .fz-blog .owl-carousel .owl-nav {
-    justify-content: center;
-  }
 }
 
 @keyframes moveAnimation {
